sourceview: make indent-width match tab-width

We still need to expose this in language settings.

https://bugzilla.gnome.org/show_bug.cgi?id=742934